refactor: add fullName attribute to User entity
