# src/main/java/dev/razafindratelo/misinformation/endpoint/rest/controller/model/UserRequest.java
@@ -5,4 +5,6 @@ import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
 
 public record UserRequest(
-    @Email @NotNull @NotBlank String email, @NotNull @NotBlank String clerkId) {}
+    @Email @NotNull @NotBlank String email,
+    @NotNull @NotBlank String fullName,
+    @NotNull @NotBlank String clerkId) {}
